syntax = "proto3";
package proto;


message CommentCreated {
    int32 id = 1;
    int32 authorId = 2;
    int32 postId = 3;
}