syntax = "proto3";
package proto;


message PostCreated {
    int32 id = 1;
    string title = 2;
    int32 authorId = 3;
}